# oberon0-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.ps1  grammar.md  main.cpp  pack.ps1  stats.ps1
ast/: CMakeLists.txt
ast/include/: ArrayReferenceNode.h  ArrayTypeNode.h  AssignmentNode.h  BasicTypeNode.h  BinaryExpressionNode.h  BlockNode.h  BooleanConstantNode.h  ConstantDeclarationNode.h  ExpressionNode.h  FieldDeclarationNode.h  FieldReferenceNode.h  Identifier.h  IfStatementNode.h  MemberLayout.h  ModuleNode.h  Node.h  NodeVisitor.h  NumberConstantNode.h  Operator.h  ParameterDeclarationNode.h  ParameterReferenceNode.h  PrintUtils.h  ProcedureCallNode.h  ProcedureDeclarationNode.h  RecordTypeNode.h  Scope.h  StatementNode.h  StringConstantNode.h  ThrowingNodeVisitor.h  TypeDeclarationNode.h  TypeNode.h  TypedIdentifierNode.h  UnaryExpressionNode.h  VariableDeclarationNode.h  VariableReferenceNode.h  WhileStatementNode.h
ast/src/: ArrayReferenceNode.cpp  ArrayTypeNode.cpp  AssignmentNode.cpp  BasicTypeNode.cpp  BinaryExpressionNode.cpp  BlockNode.cpp  ConstantDeclarationNode.cpp  FieldDeclarationNode.cpp  FieldReferenceNode.cpp  IfStatementNode.cpp  ModuleNode.cpp  Node.cpp  NodeVisitor.cpp  NumberConstantNode.cpp  ParameterDeclarationNode.cpp  ParameterReferenceNode.cpp  ProcedureCallNode.cpp  ProcedureDeclarationNode.cpp  RecordTypeNode.cpp  Scope.cpp  StringConstantNode.cpp  TypeDeclarationNode.cpp  UnaryExpressionNode.cpp  VariableDeclarationNode.cpp  VariableReferenceNode.cpp  WhileStatementNode.cpp
codegen/: CMakeLists.txt
codegen/include/: Architecture.h  CodeGenerator.h  X86_64CodeGenerator.h
codegen/src/: CodeGenerator.cpp  X86_64CodeGenerator.cpp
parser/: CMakeLists.txt  ElaborationErrors.h  Parser.cpp  Parser.h  ParserErrors.cpp  ParserErrors.h  PrintVisitor.cpp  PrintVisitor.h
parser/ast/: ActualParameterNode.cpp  ActualParameterNode.h  ArrayReferenceNode.cpp  ArrayReferenceNode.h  ArrayTypeNode.cpp  ArrayTypeNode.h  AssignmentNode.cpp  AssignmentNode.h  BasicTypeNode.cpp  BasicTypeNode.h  BinaryExpressionNode.cpp  BinaryExpressionNode.h  BlockNode.cpp  BlockNode.h  CMakeLists.txt  ChainedReferenceNode.h  ConstantDeclarationNode.cpp  ConstantDeclarationNode.h  DeclarationListNode.cpp  DeclarationListNode.h  DeclarationsNode.cpp  DeclarationsNode.h  ExpressionNode.h  FieldDeclarationNode.cpp  FieldDeclarationNode.h  FieldListNode.cpp  FieldListNode.h  FieldNode.cpp  FieldNode.h  FieldReferenceNode.cpp  FieldReferenceNode.h  Identifier.h  IdentifierListNode.cpp  IdentifierListNode.h  IfStatementNode.cpp  IfStatementNode.h  MemberReferenceNode.cpp  MemberReferenceNode.h  ModuleNode.cpp  ModuleNode.h  (+53 more)
parser/ast/include/: ArrayReferenceNode.h  BasicTypeNode.h  BinaryExpressionNode.h  BooleanConstantNode.h  ExpressionNode.h  FieldReferenceNode.h  IfStatementNode.h  NodeVisitor.h  NumberConstantNode.h  Operator.h  PrintUtils.h  Scope.h  StringConstantNode.h
parser/ast/src/: ArrayTypeNode.cpp  AssignmentNode.cpp  BinaryExpressionNode.cpp  ConstantDeclarationNode.cpp  FieldReferenceNode.cpp  NumberConstantNode.cpp  StringConstantNode.cpp
parser/include/: ParseException.h  Parser.h  ParserErrors.h  PrintVisitor.h
parser/src/: Parser.cpp  ParserErrors.cpp  PrintVisitor.cpp
parser/test/: CMakeLists.txt
parser/test/src/: DebugLogger.h  main.cpp  test_errors.cpp
scanner/: CMakeLists.txt  Token.cpp  Token.h
scanner/include/: IdentToken.h  NumberToken.h  Scanner.h  StringToken.h  Token.h
scanner/src/: IdentToken.cpp  NumberToken.cpp  Scanner.cpp  StringToken.cpp  Token.cpp
test/: .gitignore  BubbleSort.Mod  HelloWorld.Mod  Test.Mod  assemble.ps1  runtest.sh
util/: CMakeLists.txt  Logger.h
util/include/: FilePos.h  Logger.h
util/src/: Logger.cpp
